examples/test/testpolicy9594.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9594
  namespace: namespace225
spec:
  podSelector:
    matchLabels:
      key24: value48
      key13: value23
      key7: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value33
          key30: value16
      podSelector:
        matchLabels:
          key28: value35
          key12: value47
